--- a/3d_Transformation.html
+++ b/3d_Transformation.html
@@ -34,15 +34,15 @@
 </head>
 <body>
     <div class="container">
-        <div class="item">A</div>
-        <div class="item">B</div>
-        <div class="item">C</div>
-        <div class="item">D</div>
-        <div class="item">E</div>
-        <div class="item">F</div>
-        <div class="item">G</div>
-        <div class="item">H</div>
-        <div class="item">I</div>
+        <div class="item">RotateX</div>
+        <div class="item">RotateY</div>
+        <div class="item">RotateZ</div>
+        <div class="item">TranslateX</div>
+        <div class="item">TranslateY</div>
+        <div class="item">TranslateZ</div>
+        <div class="item">ScaleX</div>
+        <div class="item">ScaleY</div>
+        <div class="item">ScaleZ</div>
     </div>
     
 </body>
